fixed the /restaurants endpoint so both customers and users can now access it, they see different results though